--- a/SozialWebApplication/SozialWebApplication/Content/Site.css
+++ b/SozialWebApplication/SozialWebApplication/Content/Site.css
@@ -1,42 +1,70 @@
-﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
+﻿* {
+    font-family: Calibri;
+    font-size: 14px;
 }
 
-/* Set padding to keep content from hitting the edges */
-.body-content {
-    padding-left: 15px;
-    padding-right: 15px;
+h2 {
+    font-size: 30px;
+}
+.checkbox-group {
+    margin-left: 7%;
+    margin-top: 1%;
 }
 
-/* Set width on the form input elements since they're 100% wide by default */
-input,
-select,
-textarea {
-    max-width: 280px;
+.checkbox {
+    position: absolute;
+    width: 20px;
+    height: 19px;
+    background: transparent;
 }
 
-/* styles for validation helpers */
-.field-validation-error {
-    color: #b94a48;
+.checkbox-label {
+    margin-left: 2%;
 }
 
-.field-validation-valid {
-    display: none;
+.register-group {
+    margin-left: 72%;
 }
 
-input.input-validation-error {
-    border: 1px solid #b94a48;
+.login-group {
+   display: inline-flexbox;
+   margin-left: 7%
 }
 
-input[type="checkbox"].input-validation-error {
-    border: 0 none;
+.login-button,
+.register-button {
+  background-color: #ffd600;
+  border-radius: 4px;
+  border-color: #ffd600;
+  line-height: 25px;
+  width: 70px;
+  font-weight: bold;
+ /* background-image: url(https://fbcdn-sphotos-h-a.akamaihd.net/hphotos-ak-xpa1/v/t34.0-12/11225859_10152739096582047_366563651_n.jpg?oh=78a1816f2a9bc81420d6844f2007c759&oe=554C9375&__gda__=1431082340_98c5f793c84f4994b9c670126935b8de);
+*/
 }
 
-.validation-summary-errors {
-    color: #b94a48;
+.register {
+    height: 65px;
+    width: 75px;
 }
 
-.validation-summary-valid {
-    display: none;
+.login-label,
+.register-label {
+    width: 50px;
+    font-weight:bold;
+}
+
+.input {
+    background-image: url(https://fbcdn-sphotos-h-a.akamaihd.net/hphotos-ak-xpt1/v/t34.0-12/11208701_10152739046152047_139355865_n.jpg?oh=5d28f462f80fa4c90f3b102b65bc6bfb&oe=554C5EE6&__gda__=1431046797_cf90776f7ec533a277c5818eaa82426a);
+    border: 1px solid #ffd600;
+    border-radius: 4px;
+    line-height: 25px;
+    width: 259px;
+    margin-right: 35px;
+}
+
+.logo {
+   margin-left: 15%;
+   margin-top: -20%;
+   margin-bottom: 5%;
 }
