login upphafssida og update a utliti

--- a/SozialWebApplication/SozialWebApplication/Views/Account/Login.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/Account/Login.cshtml
@@ -70,7 +70,7 @@
 </div>
 
 <div class="logo">
-    <img src="https://scontent-lhr.xx.fbcdn.net/hphotos-xpa1/v/t1.0-9/11188406_10152738112412047_3185149741492135647_n.jpg?oh=bd18d6c4edcf797bc2f00d993b15b910&oe=55E23459" alt="logo">
+    <img src="https://scontent-lhr.xx.fbcdn.net/hphotos-xpa1/v/t1.0-9/11188406_10152738112412047_3185149741492135647_n.jpg?oh=bd18d6c4edcf797bc2f00d993b15b910&oe=55E23459" class="front-logo" alt="logo">
 </div>
 
 @section Scripts {
