--- a/SozialWebApplication/SozialWebApplication/Content/Site.css
+++ b/SozialWebApplication/SozialWebApplication/Content/Site.css
@@ -7,7 +7,7 @@ h2 {
     font-size: 30px;
 }
 .checkbox-group {
-    margin-left: 7%;
+    margin-left: 15%;
     margin-top: 1%;
 }
 
@@ -23,12 +23,14 @@ h2 {
 }
 
 .register-group {
-    margin-left: 72%;
+    margin-left: 61%;
+    margin-top: 10%;
 }
 
 .login-group {
    display: inline-flexbox;
-   margin-left: 7%
+   margin-left: 15%;
+   margin-top: 5%;
 }
 
 .login-button,
@@ -60,11 +62,15 @@ h2 {
     border-radius: 4px;
     line-height: 25px;
     width: 259px;
-    margin-right: 35px;
+    margin-right: 53px;
 }
 
 .logo {
    margin-left: 15%;
    margin-top: -20%;
-   margin-bottom: 5%;
+   margin-bottom: 10%;
+}
+
+.front-logo {
+    height: 250px;
 }
