--- a/SozialWebApplication/SozialWebApplication/Views/Account/Login.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/Account/Login.cshtml
@@ -59,8 +59,8 @@
                 @Html.PasswordFor(m => m.Password, new { @class = "input" })
             </div>
 
-                @Html.LabelFor(m => m.ConfirmPassword, new { @class = "register-label" })
-                @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "input" })
+               <!-- "at"Html.LabelFor(m => m.ConfirmPassword, new { "at"class = "register-label" })
+                "at"Html.PasswordFor(m => m.ConfirmPassword, new { "at"class = "input" })-->
         </div>
 
         <div class="register">
