--- a/SozialWebApplication/SozialWebApplication/Content/Site.css
+++ b/SozialWebApplication/SozialWebApplication/Content/Site.css
@@ -7,7 +7,7 @@ h2 {
     font-size: 30px;
 }
 .checkbox-group {
-    margin-left: 15%;
+    margin-left: 63%;
     margin-top: 1%;
 }
 
@@ -16,6 +16,7 @@ h2 {
     width: 20px;
     height: 19px;
     background: transparent;
+    margin-left: -1%
 }
 
 .checkbox-label {
