--- a/SozialWebApplication/SozialWebApplication/Content/Site.css
+++ b/SozialWebApplication/SozialWebApplication/Content/Site.css
@@ -81,3 +81,12 @@ h2 {
 .register-button{
     margin-top: 15px;
 }
+
+.bc{
+    background-color: #ffd600;
+    background-repeat: repeat;
+}
+
+.namecard-buttom{
+
+}
