--- a/SozialWebApplication/SozialWebApplication/Views/Account/Login.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/Account/Login.cshtml
@@ -49,7 +49,7 @@
             <div class="register">
 
                 <!-- "at"Html.LabelFor(m => m.Email, new { "at"class = "register-label" })
-                "at"Html.PasswordFor(m => m.ConfirmPassword, new { "at"class = "input" }) -->
+                "at"Html.PasswordFor(m => m.Email, new { "at"class = "input" }) -->
                 @Html.LabelFor(m => m.UserName, new { @class = "register-label" })
                 @Html.TextBoxFor(m => m.UserName, new { @class = "input" })
             </div>
