--- a/SozialWebApplication/SozialWebApplication/Views/Account/Register.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/Account/Register.cshtml
@@ -1,32 +1,32 @@
-﻿<!--"att"model SozialWebApplication.Models.RegisterViewModel
-"att"{
+﻿@model SozialWebApplication.Models.RegisterViewModel
+@{
     ViewBag.Title = "Register";
 }
 
-<h2>"att"ViewBag.Title.</h2>
+<h2>@ViewBag.Title.</h2>
 
-"att"using (Html.BeginForm("Register", "Account", FormMethod.Post, new { "att"class = "form-horizontal", role = "form" }))
+@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
-    "att"Html.AntiForgeryToken()
+    @Html.AntiForgeryToken()
     <h4>Create a new account.</h4>
     <hr />
-    "att"Html.ValidationSummary()
+    @Html.ValidationSummary()
     <div class="form-group">
-        "att"Html.LabelFor(m => m.UserName, new { "att"class = "col-md-2 control-label" })
+        @Html.LabelFor(m => m.UserName, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
-            "att"Html.TextBoxFor(m => m.UserName, new { "att"class = "form-control" })
+            @Html.TextBoxFor(m => m.UserName, new { @class = "form-control" })
         </div>
     </div>
     <div class="form-group">
-        "att"Html.LabelFor(m => m.Password, new { "att"class = "col-md-2 control-label" })
+        @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
-            "att"Html.PasswordFor(m => m.Password, new { "att"class = "form-control" })
+            @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
         </div>
     </div>
     <div class="form-group">
-        "att"Html.LabelFor(m => m.ConfirmPassword, new { "att"class = "col-md-2 control-label" })
+        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
-            "att"Html.PasswordFor(m => m.ConfirmPassword, new { "att"class = "form-control" })
+            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
         </div>
     </div>
     <div class="form-group">
@@ -36,7 +36,7 @@
     </div>
 }
 
-"att"section Scripts {
-    "att"Scripts.Render("~/bundles/jqueryval")
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
 }
--->
+
