--- a/SozialWebApplication/SozialWebApplication/Views/Home/Newsfeed.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/Home/Newsfeed.cshtml
@@ -2,8 +2,18 @@
     @{
         ViewBag.Title = "Newsfeed";
     }
+    <p>hallohallo</p>
     <div class="namecard-button">
-        <img src="https://scontent-lhr.xx.fbcdn.net/hphotos-xpa1/v/t1.0-9/11188406_10152738112412047_3185149741492135647_n.jpg?oh=bd18d6c4edcf797bc2f00d993b15b910&oe=55E23459" class="Name-Logo" alt="Name-logo">
-        <h2>NAME</h2>
+        <img src="https://scontent-lhr.xx.fbcdn.net/hphotos-xpa1/v/t1.0-9/11188406_10152738112412047_3185149741492135647_n.jpg?oh=bd18d6c4edcf797bc2f00d993b15b910&oe=55E23459" class="name-logo" alt="name-logo">
+        <h3>NAME</h3>
     </div>
+
+    <p>HalloHallo</p>
+
+    <div class="feed-body">
+        <p>body</p>
+    </div>
+
+    <p>HalloHallo</p>
+ 
 </div>
