--- a/SozialWebApplication/SozialWebApplication/Content/Site.css
+++ b/SozialWebApplication/SozialWebApplication/Content/Site.css
@@ -25,7 +25,7 @@ h2 {
 
 .register-group {
     margin-left: 61%;
-    margin-top: 10%;
+    margin-top: 6%;
 }
 
 .login-group {
@@ -65,13 +65,13 @@ h2 {
 }
 
 .logo {
-   margin-left: 15%;
-   margin-top: -20%;
-   margin-bottom: 10%;
+   margin-left: 18%;
+   margin-top: -25%;
+   margin-bottom: 7%;
 }
 
 .front-logo {
-    height: 250px;
+    height: 270px;
 }
 
 .register-group .input{
@@ -83,10 +83,27 @@ h2 {
 }
 
 .bc{
-    background-color: #ffd600;
-    background-repeat: repeat;
+    background: url(https://scontent-lhr.xx.fbcdn.net/hphotos-xat1/v/t1.0-9/10426127_10152740384227047_119338495523974373_n.jpg?oh=7c645bb2a3e7176117f2b049f1a047ff&oe=55C721B3) center;
+    background-size: 100%;
+    /*background-color: #ffd600;*/
+    /*background-repeat: no-repeat;*/
 }
 
-.namecard-buttom{
+.namecard-button, .feed-body{
+    background-color: white;
+    margin-left: 2%;
+    margin-right: 2%;
+    border-radius: 25px;
 
+}
+.name-logo{
+    height: 150px;
+    margin: 1%;
+}
+
+h3{
+    display: inline;
+    font-size: 66px;
+    position: absolute;
+    margin-left: 25%;
 }
