after registering go on login site

--- a/SozialWebApplication/SozialWebApplication/Views/Home/Banner.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/Home/Banner.cshtml
@@ -16,7 +16,14 @@
     <br/>
 
     <div class="feed-body">
+       <!-- <div id="result">
+            "at"Ajax.ActionLink(
+            "load partial view",
+            "Load",
+            "Home",
+            new AjaxOptions { UpdateTargetId = "result" })-->
         <br/>
+        </div>
     </div>
 
     <br/>
