--- a/SozialWebApplication/SozialWebApplication/Views/Home/Banner.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/Home/Banner.cshtml
@@ -1,15 +1,15 @@
 ﻿<div class="bc">
     @{
-        ViewBag.Title = "Newsfeed";
+        ViewBag.Title = "Banner";
     }
 
     <br/>
     <div class="namecard-button">
-        <a href="About">
+        <a href="Banner">
            <img src="https://scontent-lhr.xx.fbcdn.net/hphotos-xpa1/v/t1.0-9/11188406_10152738112412047_3185149741492135647_n.jpg?oh=bd18d6c4edcf797bc2f00d993b15b910&oe=55E23459" class="name-logo" alt="name-logo">
         </a>
         <div class="my-name">
-            @Html.ActionLink("NAME", "namecard")
+            @Html.ActionLink("NAME", "OwnNameCard", "NameCards")
         </div>
     </div>
 
