--- a/SozialWebApplication/SozialWebApplication/Views/Home/Banner.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/Home/Banner.cshtml
@@ -15,14 +15,17 @@
 
     <br/>
 
-    <div class="feed-body">
-       <!-- <div id="result">
-            "at"Ajax.ActionLink(
-            "load partial view",
-            "Load",
-            "Home",
-            new AjaxOptions { UpdateTargetId = "result" })-->
-        <br/>
+    <div class="overflowceeper">
+        <div class="feed-body">
+            <!-- <div id="result">
+                 "at"Ajax.ActionLink(
+                 "load partial view",
+                 "Load",
+                 "Home",
+                 new AjaxOptions { UpdateTargetId = "result" })
+             <br/>-->
+            <iframe src="~/NameCards/OwnNameCard"></iframe>
+        </div>
     </div>
 
     <br/>
