search view ready

--- a/SozialWebApplication/SozialWebApplication/Content/CSS/namecard.css
+++ b/SozialWebApplication/SozialWebApplication/Content/CSS/namecard.css
@@ -5,7 +5,7 @@
      font-weight: bold;
      margin-left: 48%;
      position: absolute;
-     margin-top: 5%;
+     margin-top: 3%;
      text-align: center;
 }
 
@@ -18,7 +18,6 @@
 
 .follow {
    margin-left: 67%;
-   margin-top: 2%;
    background-image: url(https://scontent-lhr.xx.fbcdn.net/hphotos-xpa1/v/t1.0-9/11203151_10152737854187047_5085997620109960228_n.jpg?oh=75cbfdf839a43f2fab1d1945368a2824&oe=55C5BB57);
    background-repeat: no-repeat;
    background-size: 100%;
@@ -29,7 +28,6 @@
 }
 
 .edit {
-   margin-bottom: 24%;
    margin-top: 7%;
    margin-left: 30%;
    background-image: url(https://scontent-lhr.xx.fbcdn.net/hphotos-xpa1/v/t1.0-9/10429814_10152737854162047_3747334878276722025_n.jpg?oh=33709d0b0111fcb95a35be9effec8f9e&oe=55D9A37C);
@@ -87,4 +85,76 @@
    border: none;
    width: 48px;
    height: 39px;
+}
+
+.save {
+  margin-top: 8%;
+  margin-left: -10%;
+  margin-bottom: 1%;
+  border-radius: 4px;
+  border-color: #faa61f;
+  line-height: 25px;
+  width: 70px;
+  font-weight: bold;
+  background-image: url(https://scontent-lhr.xx.fbcdn.net/hphotos-xpa1/v/t1.0-9/11136784_10152739372817047_3965445374771875884_n.jpg?oh=b1c9db12fd324f42eb53bc33e682042c&oe=55D35DC0);
+}
+
+.profile-picture-edit {
+  margin-left: -47%;
+  width: 16%;
+  position: absolute;
+  margin-top: 1%;
+}
+
+.edit-information {
+  margin-left: 44%;
+  text-align: center;
+}
+
+.edit-input {
+  width: 36%;
+  margin-top: 4%;
+}
+
+.text-input,
+.search {
+  background-image: url(https://scontent-lhr.xx.fbcdn.net/hphotos-xpt1/v/t34.0-12/11208701_10152739046152047_139355865_n.jpg?oh=788af66d5fab96c1574da0dbf576e6b8&oe=554F01E6);
+  border: 1px solid #ffd600;
+  border-radius: 4px;
+  line-height: 25px;
+  width: 259px;
+  margin-right: 53px;
+  margin-bottom: 9%;
+}
+
+.label {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.search-button {
+    background-image: url(https://scontent-lhr.xx.fbcdn.net/hphotos-xtf1/v/t1.0-9/11111113_10153334484758606_7643963808574988339_n.jpg?oh=02bb0a1adbb0ed56626c85fb3ae4bb28&oe=55D828D5);
+    border: none;
+    background-repeat: no-repeat;
+    background-size: 103%;
+    cursor: pointer;
+    border: none;
+    width: 20px;
+    height: 20px;
+}
+
+.searching {
+    margin-top:1%;
+    margin-left:38%;
+}
+
+.button {
+      margin-left: 34%;
+  margin-top: -12%;
+  margin-bottom: 3%;
+}
+
+.search {
+  text-align: center;
+  font-weight: bold;
 }
