Reyna fa partial view

--- a/SozialWebApplication/SozialWebApplication/Views/Home/Banner.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/Home/Banner.cshtml
@@ -24,8 +24,10 @@
                  "Home",
                  new AjaxOptions { UpdateTargetId = "result" })
              <br/>-->
-            <iframe src="~/NameCards/OwnNameCard"></iframe>
-        </div>
+            <iframe src="~/NameCards/OwnNameCard"></iframe>-->
+            <!--"att"{Html.RenderPartial("att""~/NameCards/OwnNameCard");}-->
+            
+                    </div>
     </div>
 
     <br/>
