--- a/SozialWebApplication/SozialWebApplication/Views/Home/Banner.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/Home/Banner.cshtml
@@ -24,9 +24,9 @@
                  "Home",
                  new AjaxOptions { UpdateTargetId = "result" })
              <br/>-->
-            <!--<iframe src="~/NameCards/OwnNameCard"></iframe>-->
+            <iframe src="~/NameCards/OwnNameCard"></iframe>
             <!--"att"{Html.RenderPartial("att""~/NameCards/OwnNameCard");}-->   
-            @Html.Partial("~/Views/NAmeCards/OwnNameCard.cshtml")
+            <!--Html.Partial("~/Views/NAmeCards/OwnNameCard.cshtml")-->  
         </div>
    </div>
 
