--- a/SozialWebApplication/SozialWebApplication/Views/NameCards/EditNameCard.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/NameCards/EditNameCard.cshtml
@@ -1,7 +1,9 @@
 ﻿<div class="edit-information">
     <img src="https://scontent-lhr.xx.fbcdn.net/hphotos-xfp1/v/t1.0-9/10421398_10152740713772047_7949496574370778723_n.jpg?oh=561cb94e05da18348a51bfaeab125016&oe=55D1A31D" class="profile-picture-edit" alt="profilepic">
     
-    <form action="POST" class="form-input">
+    <!--<form action="POST" class="form-input">-->
+      @using (Html.BeginForm("EditNameCard", "NameCards"))
+      {
         <div class="edit-input">
             <label for="input-name" class="label">Name</label>
             <input type="text" name="input-name" id="input-name" class="text-input" placeholder= @Html.ViewContext.HttpContext.User.Identity.Name />
@@ -13,8 +15,10 @@
             <input type="text" name="input-email" id="input-email" class="text-input" placeholder="CurrentEmail" />
         </div>
 
-        <input type="submit" value="Save" class="save" />
-    </form>
+    <input type="submit" value="Save" class="save"/>
+    <!--Bæta við takka sem færir notanda aftur á OwnNameCard-->
+    <!-- Perla TO DO: birta rett nafn fra view model i placeholder-->
+      }
 </div>
 
 
