--- a/SozialWebApplication/SozialWebApplication/Views/NameCards/EditNameCard.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/NameCards/EditNameCard.cshtml
@@ -16,7 +16,7 @@
         </div>
 
     <input type="submit" value="Save" class="save"/>
-    <!--Bæta við takka sem færir notanda aftur á OwnNameCard-->
+    <a href="OwnNameCard"><input type="button" value="Back" class="back"/></a>
     <!-- Perla TO DO: birta rett nafn fra view model i placeholder-->
       }
 </div>
