--- a/SozialWebApplication/SozialWebApplication/Views/NameCards/OwnNameCard.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/NameCards/OwnNameCard.cshtml
@@ -1,4 +1,5 @@
-﻿<div class="namecard">
+﻿
+<div class="namecard">
     <div class="information">
         <img src="https://scontent-lhr.xx.fbcdn.net/hphotos-xfp1/v/t1.0-9/10421398_10152740713772047_7949496574370778723_n.jpg?oh=561cb94e05da18348a51bfaeab125016&oe=55D1A31D" class="profile-picture" alt="profilepic">
        
