newsfeed næstum ready

--- a/SozialWebApplication/SozialWebApplication/Content/CSS/NewsFeed.css
+++ b/SozialWebApplication/SozialWebApplication/Content/CSS/NewsFeed.css
@@ -65,3 +65,46 @@
   font-weight: bold;
   background-image: url(https://scontent-lhr.xx.fbcdn.net/hphotos-xpa1/v/t1.0-9/11136784_10152739372817047_3965445374771875884_n.jpg?oh=b1c9db12fd324f42eb53bc33e682042c&oe=55D35DC0);
 }
+
+.all-posts {
+  margin-left: 33%;
+  margin-top: 5%;
+}
+
+.each-post {
+  border: 1px solid black;
+  border-radius: 20px;
+  margin-right: 13%;
+  margin-left: -35%;
+  height: 120px;
+}
+
+.like-img {
+  background-image: url(https://scontent-lhr.xx.fbcdn.net/hphotos-xpf1/v/t1.0-9/10984151_10152737854342047_4597756465764730856_n.jpg?oh=efad8928292b2a614776c82d4860acfe&oe=55DF7DA4);
+  /* border-left: 1px solid black; */
+  border: none;
+  /* margin-right: -26%; */
+  margin-left: 92%;
+  background-size: 100%;
+  background-repeat: no-repeat;
+  width: 56px;
+  height: 56px;
+  margin-top: 2%;
+  cursor: pointer;
+}
+
+.post-name {
+    margin-left: -32%;
+  margin-bottom: 0%;
+}
+
+.post-date {
+  position: absolute;
+  margin-top: -1.5%;
+  margin-left: 50%;
+}
+
+.post-comment{
+  margin-left: -32%;
+  margin-top: 0%;
+}
