--- a/SozialWebApplication/SozialWebApplication/Views/Home/NewsFeed.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/Home/NewsFeed.cshtml
@@ -16,4 +16,22 @@
     <input type="submit" value="Post" class="post-submit" />
 }
 
+<div class="all-posts">
+    <p class="post-name">Name</p>
+    <p class="post-date">Date Created</p>
+    
+    <div class="each-post">
+        <div class="post-content">
+
+        </div>
+
+        <div class="like">
+            <input type="button" class="like-img" />
+        </div>
+    </div>
+
+    <p class="post-comment">Comment</p>
+
+</div>
+
 
