--- a/SozialWebApplication/SozialWebApplication/Content/CSS/Banner.css
+++ b/SozialWebApplication/SozialWebApplication/Content/CSS/Banner.css
@@ -1,8 +1,6 @@
 ﻿.bc{
-    background: url(https://scontent-lhr.xx.fbcdn.net/hphotos-xat1/v/t1.0-9/10426127_10152740384227047_119338495523974373_n.jpg?oh=7c645bb2a3e7176117f2b049f1a047ff&oe=55C721B3) center;
+    background: url('/Myndir/Background.jpg') center;
     background-size: 100%;
-    /*background-color: #ffd600;*/
-    /*background-repeat: no-repeat;*/
 }
 
 .namecard-button, .feed-body{
@@ -43,8 +41,6 @@ iframe{
     border: none;
     height: 325px;
     width: 1250px;
-    /*margin-top: 1.5%;*/
-    /*margin-bottom: 1.5%;*/
 }
 
 .feed-body{
