--- a/SozialWebApplication/SozialWebApplication/Views/NameCards/EditNameCard.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/NameCards/EditNameCard.cshtml
@@ -1,7 +1,7 @@
 ﻿@model SozialWebApplication.Models.ViewModels.NameCardViewModel
 
 <div class="edit-information">
-    <img src="https://scontent-lhr.xx.fbcdn.net/hphotos-xfp1/v/t1.0-9/10421398_10152740713772047_7949496574370778723_n.jpg?oh=561cb94e05da18348a51bfaeab125016&oe=55D1A31D" class="profile-picture-edit" alt="profilepic">
+    <img src="/Myndir/myndlogo.jpg" class="profile-picture-edit" alt="profilepic">
     
       @using (Html.BeginForm("EditNameCard", "NameCards", FormMethod.Post))
       {
