--- a/SozialWebApplication/SozialWebApplication/Views/NameCards/OthersNameCard.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/NameCards/OthersNameCard.cshtml
@@ -1,6 +1,6 @@
 ﻿<div>
     <div class="information">
-        <img src="https://scontent-lhr.xx.fbcdn.net/hphotos-xfp1/v/t1.0-9/10421398_10152740713772047_7949496574370778723_n.jpg?oh=561cb94e05da18348a51bfaeab125016&oe=55D1A31D" class="profile-picture" alt="profilepic">
+        <img src="/Myndir/myndlogo.jpg" class="profile-picture" alt="profilepic">
         <p>Name</p>
         <p>Line of study</p>
         <p>email@ru.is</p>
