--- a/SozialWebApplication/SozialWebApplication/Content/CSS/Site.css
+++ b/SozialWebApplication/SozialWebApplication/Content/CSS/Site.css
@@ -41,7 +41,7 @@ h2 {
   line-height: 25px;
   width: 70px;
   font-weight: bold;
-  background-image: url(https://scontent-lhr.xx.fbcdn.net/hphotos-xpa1/v/t1.0-9/11136784_10152739372817047_3965445374771875884_n.jpg?oh=b1c9db12fd324f42eb53bc33e682042c&oe=55D35DC0);
+  background-image: url(/Myndir/takkar.jpg);
 }
 
 .register {
@@ -56,7 +56,7 @@ h2 {
 }
 
 .input {
-    background-image: url(https://scontent-lhr.xx.fbcdn.net/hphotos-xpt1/v/t34.0-12/11208701_10152739046152047_139355865_n.jpg?oh=788af66d5fab96c1574da0dbf576e6b8&oe=554F01E6);
+    background-image: url(/Myndir/input.jpg);
     border: 1px solid #ffd600;
     border-radius: 4px;
     line-height: 25px;
@@ -72,10 +72,6 @@ h2 {
 
 .front-logo {
     height: 270px;
-}
-
-.register-group .input{
-    /*display: block;*/
 }
 
 .register-button{
