--- a/SozialWebApplication/SozialWebApplication/Views/NameCards/Search.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/NameCards/Search.cshtml
@@ -4,7 +4,7 @@
     <div class="searching">
         <input type="text" id="search" name="search" class="search" placeholder="Search ..." />
         <div class="button">
-            <a href="Search"><input type="button" class="search-button" /></a>
+            <a href="Search"><input type="submit" class="search-button" /></a>
         </div>
     </div>
 }
@@ -12,10 +12,12 @@
     <dl>
         @foreach (var item in Model.AllUsers)
         {
-           <dt><a href="">@Html.DisplayFor(model => item.FullName)</a></dt>
+           <dt><a href="" >@Html.DisplayFor(model => item.FullName)</a></dt>
+            // @Html.ActionLink(item.Title, "Detail", "MovieApp", new { id = item.Id }, new { @class = "" })
+            //<dt>@Html.ActionLink(item.FullName, "OtherNameCard", "NameCard", new { id = item.UserName}) </dt>
         }
     </dl>
-    <div>
+    <dl>
         @if (Model.SearchResultsUsers.Count() == 0)
         {
         }
@@ -23,9 +25,9 @@
         {
             foreach (var item in Model.SearchResultsUsers)
             {
-                <!--<a href="">@Html.DisplayFor(model => item.FullName)</a>-->
+                <dt><a href="">@Html.DisplayFor(model => item.FullName)</a></dt>
             }
         }
 
-   </div>
+   </dl>
 
