--- a/SozialWebApplication/SozialWebApplication/Views/Shared/_Layout.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/Shared/_Layout.cshtml
@@ -36,7 +36,8 @@
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
         </footer>
     </div>
-
+    <script src="/Scripts/jquery-1.10.2.min.js"></script>
+    <script src="/Scripts/aWholeLottaJavascript.js"></script>
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
