Tengja other namecard

--- a/SozialWebApplication/SozialWebApplication/Views/NameCards/OthersNameCard.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/NameCards/OthersNameCard.cshtml
@@ -2,7 +2,7 @@
 <div>
     <div class="information">
         <img src="/Myndir/myndlogo.jpg" class="profile-picture" alt="profilepic">
-        <p>Full Name</p>
+        <p>@Html.DisplayFor(model => model.userWithId.FullName)</p>
         <p>@Html.DisplayFor(model => model.userWithId.LineOfStudy)</p>
         <p>@Html.DisplayFor(model => model.userWithId.Email)</p>
     </div>
