error msg on login page

--- a/SozialWebApplication/SozialWebApplication/Content/CSS/Site.css
+++ b/SozialWebApplication/SozialWebApplication/Content/CSS/Site.css
@@ -81,3 +81,14 @@ h2 {
 .register-button{
     margin-top: 15px;
 }
+
+.validation-summary-errors
+{
+    color: #ff0000;
+    font-weight: bold;
+    list-style-type: none;
+}
+ul
+{
+    list-style-type: none;
+}
