--- a/SozialWebApplication/SozialWebApplication/Views/Home/SearchGroups.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/Home/SearchGroups.cshtml
@@ -1,6 +1,47 @@
-﻿<div class="searching">
-    <input type="text" id="search" name="search" class="search" placeholder="Search ..." />
-    <div class="button">
-        <a href="Search"><input type="button" class="search-button" /></a>
+﻿@model SozialWebApplication.Models.ViewModels.NameCardViewModel
+@using (Html.BeginForm("SearchGroups", "Home", FormMethod.Post))
+{
+    <div class="searching">
+        <input type="text" id="search" name="search" class="search" placeholder="Search ..." />
+        <div class="button">
+            <a href="SearchGroups"><input type="submit" class="search-button" /></a>
+        </div>
     </div>
-</div>
+}
+<dl>
+    <h4>My Groups</h4>
+    @foreach (var item in Model.AllUserGroups)
+    {
+        if (item.GroupName != null)
+        {
+            <dt>@Html.ActionLink(item.GroupName, "NewsfeedGroups", "Home", new { id = item.Id }) </dt>
+        }
+    }
+</dl>
+<dl>
+    <h4>All Groups</h4>
+    @foreach (var item in Model.AllGroups)
+    {
+        if (item.GroupName != null)
+        {
+            <dt>@Html.ActionLink(item.GroupName, "NewsfeedGroups", "Home", new { id = item.Id }) </dt>
+        }
+    }
+</dl>
+<dl>
+    <h4>Search results</h4>
+    @if (Model.SearchResultsGroups.Count() == 0)
+    {
+    }
+    else
+    {
+        foreach (var item in Model.SearchResultsGroups)
+        {
+            if (item.GroupName != null)
+            {
+                <dt>@Html.ActionLink(item.GroupName, "NewsfeedGroup", "Home", new { id = item.Id }) </dt>
+            }
+        }
+    }
+</dl>
+
