--- a/SozialWebApplication/SozialWebApplication/Views/NameCards/OwnNameCard.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/NameCards/OwnNameCard.cshtml
@@ -8,7 +8,7 @@
             <p>@Html.DisplayFor(model => model.userWithId.Email)</p>
     </div>
     <a href="~/NameCards/Search"><input type="button" class="follow" /></a>
-    <a href="~/NameCards/Search"><input type="button" class="groups" /></a>
+    <a href="~/Home/SearchGroups"><input type="button" class="groups" /></a>
     <a href="~/NameCards/EditNameCard"><input type="button" class="edit" /></a>
     <a href="~/NameCards/Search"><input type="button" class="match" /></a>
 </div>
